--- a/assets/style.css
+++ b/assets/style.css
@@ -272,7 +272,7 @@ footer{
     }
 
 }
-/* Responsividade Mobile */
+/* Responsividade Mobile git */
 @media (max-width:425px){
     .container{
         padding-left: 20px;
